Fixed horizontal scroll

--- a/_sass/sections/_scene.sass
+++ b/_sass/sections/_scene.sass
@@ -1,12 +1,14 @@
 .scene
   position: relative
-  width: 110%
+  width: 100%
   padding-bottom: 110%
+  overflow: hidden
 
   .layers,
   .overlay
     position: absolute
-    width: 100%
+    width: 112%
+    margin: -6%
     height: 100%
 
   .layers
